--- a/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/NoSQL_setup_starter.ipynb
@@ -143,8 +143,9 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64585342016d13ea82e96059'),\n",
-      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
+      " '_id': ObjectId('64615115d188d8a0e76c0c37'),\n",
+      " 'geocode': {'latitude': Decimal128('51.1481330000000'),\n",
+      "             'longitude': Decimal128('1.38329800000000')},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254250',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -197,8 +198,9 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64585342016d13ea82e96059'),\n",
-      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
+      " '_id': ObjectId('64615115d188d8a0e76c0c37'),\n",
+      " 'geocode': {'latitude': Decimal128('51.1481330000000'),\n",
+      "             'longitude': Decimal128('1.38329800000000')},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254250',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -292,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x2055bbb3ca0>"
+       "<pymongo.results.InsertOneResult at 0x227aee0ff10>"
       ]
      },
      "execution_count": 10,
@@ -314,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('6458540ecf3b4e51020e5bcb'),\n",
+       "{'_id': ObjectId('64615d7305fe8acca9a9b824'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': '',\n",
@@ -330,7 +332,8 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'geocode': {'longitude': Decimal128('0.0838400000000000'),\n",
+       "  'latitude': Decimal128('51.4901420000000')},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
        " 'NewRatingPending': True}"
@@ -363,7 +366,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('64585342016d13ea82e9605a'),\n",
+       "{'_id': ObjectId('64615115d188d8a0e76c0c39'),\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': 1}"
       ]
@@ -390,17 +393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x2055c1a0670>"
+       "<pymongo.results.UpdateResult at 0x227b0b7ab80>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('6458540ecf3b4e51020e5bcb'),\n",
+       "{'_id': ObjectId('64615d7305fe8acca9a9b824'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': 1,\n",
@@ -440,13 +443,14 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
+       " 'geocode': {'longitude': Decimal128('0.0838400000000000'),\n",
+       "  'latitude': Decimal128('51.4901420000000')},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
        " 'NewRatingPending': True}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -476,7 +480,7 @@
        "994"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,17 +492,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x2055eb2bcd0>"
+       "<pymongo.results.DeleteResult at 0x227b0b7aee0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -520,7 +524,7 @@
        "0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -569,17 +573,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x2055eb15970>"
+       "<pymongo.results.UpdateResult at 0x227b0baf9d0>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,17 +609,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x2055c1a02e0>"
+       "<pymongo.results.UpdateResult at 0x227b0b7aaf0>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,17 +632,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x2055c1a03d0>"
+       "<pymongo.results.UpdateResult at 0x227aee0f310>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -659,32 +663,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      "{'AddressLine1': '16 The Stade',\n",
+      " 'AddressLine2': 'Folkestone',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Mariner',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'Distance': 4591.912144538092,\n",
+      " 'FHRSID': 289560,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000039927',\n",
       " 'LocalAuthorityCode': '188',\n",
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'PostCode': 'CT19 6AB',\n",
+      " 'RatingDate': '2019-03-19T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64585342016d13ea82e9633a'),\n",
-      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      " '_id': ObjectId('64615115d188d8a0e76c0f20'),\n",
+      " 'geocode': {'latitude': 51.08084, 'longitude': 1.188537},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289560',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -694,7 +698,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
      ]
     }
    ],
